# apolo-firmware

apolo-firmware-jv-lse/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
apolo-firmware-jv-lse/apolo/inc/: apl_camera.hpp  apl_sdcard.h  apl_sdcard.hpp  apl_storage.hpp  apl_system.hpp  apl_task_led.hpp  apl_wifi.hpp  apolo_essentials.h  apolo_main.hpp
apolo-firmware-jv-lse/apolo/src/: apl_camera.cpp  apl_http_client.cpp  apl_sdcard.c  apl_sdcard.cpp  apl_storage.cpp  apl_system.cpp  apl_task_led.cpp  apl_webserver.cpp  apolo_main.cpp  main.c++  old_form.c++  template.c++
apolo-firmware-jv-lse/apolo_edgeAI/inc/: apl_bin_detection.hpp  bin_model_data.h
apolo-firmware-jv-lse/apolo_edgeAI/src/: apl_bin_detection.cpp
apolo-firmware-jv-lse/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
