idf_component_register(SRCS "app_main.cpp"
                            "../apolo_edgeAI/src/bin_model_data.cpp"
                            "../apolo_edgeAI/src/apl_bin_detection.cpp"
                            "../apolo/src/apl_sdcard.cpp"
                            "../apolo/src/apl_camera.cpp"
                            "../apolo/src/apl_http_client.cpp"
                            "../apolo/src/apl_system.cpp"
                            "../apolo/src/apl_storage.cpp"
                            "../apolo/src/apl_webserver.cpp"
                            "../apolo/src/apolo_main.cpp"
                            "../apolo/src/apl_task_led.cpp"
                        INCLUDE_DIRS "."
                                     "../apolo/inc/"
                                     "../apolo_edgeAI/inc/"
)
